# ppab-user-logins

./: .gitignore  main.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
config/: credentials.json
db/: db.db  schema.sql  seed.sql
src/core/: credentials.py  data.py
src/shell/: user_repo.py
test/core/: test_credentials.py
