[project]
name = "PPAB_Game_of_Life"
version = "0.1.0"
description = "Game of Life as guided by Robert Heaton's Programming Projects for Advanced Beginners"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.131.15",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = "."
