[project]
name = "PPAB_User_Logins"
version = "0.1.0"
description = "User Logins as guided by Robert Heaton's Programming Projects for Advanced Beginners"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.131.15",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff]
lint.extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = "."
